See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.40.00

              anytopnm, pnmmargin, pamstretch-gen, ppmquantall: fix
              small temporary file security exposure.

              pnmmargin: add -plain option.    Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmmargin: recognize invalid options better.    Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmtopng: Sort palette properly when alpha maxval != 255.

              pnmtopng: Fix array bound violation with = 256 colors and -alpha.

              pnmtopng: Fix array bound violation with > 256 alpha mask levels.

              pnmgamma: improve error messages.

              pamtopfm: Fix wrong selection of default endianness.

              Fix uninitialized variable in pnm_allocpamrown().

              Rename pamtooctave to pamtooctaveimg.

              Build: don't use 'uint' type.  Solaris 10 apparently doesn't
              have it.

              Build: Add missing <stdlib.h> to ppmrough.c.

07.06.26 BJH  Release 10.39.00

              Add pamtooctave.  Thanks Scott Pakin (scott@pakin.org).

              Add pamundice.

              fitstopnm: add -omaxval.

              pnmremap: add -norand.

              pbmtext: improve error messages about fonts.

              pamtofits: fix -min, -max.

              fitstopnm: fix BITPIX = -32.

              PAM_STRUCT_SIZE: cast pointer to ulong instead of uint.

              pamthreshold: fix totally bogus threshold selection with
              simple thresholding.

              Configure: do test compile for missing Libxml2 and too old
              Libxml2.

              Configure: fix bug detecting presence of libvga with
              Ldconfig.

              Configure: build properly for Mac OSX when user says
              libnetpbm will be in the default search path.
